--- a/milkfarm-ui/src/components/index.css
+++ b/milkfarm-ui/src/components/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 #carouselExampleIndicators{
-  border: 20px solid rgb(10, 172, 236);
+  /* border: 7px solid rgb(10, 172, 236); */
   /* margin: auto; */
 }
 
